refactoring user role

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -450,6 +450,7 @@ user.changePassword.newPassword              = Bitte geben Sie das neue Passwort
 user.changePassword.newPasswordRepeat        = Bitte geben Sie die Passwortwiederholung ein!
 user.changePassword.oldPassword              = Bitte geben Sie das alte Passwort ein!
 user.create.password                         = Passwort
+user.create.roles                            = Rolle
 user.create.title                            = Benutzer anlegen
 user.create.username                         = Benutzername
 user.created                                 = Der Benutzer {0} wurde angelegt!
