--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -450,6 +450,7 @@ user.changePassword.newPassword              = Please enter a new password!
 user.changePassword.newPasswordRepeat        = Please enter the password repeat!
 user.changePassword.oldPassword              = Please enter the old password!
 user.create.password                         = password
+user.create.roles                            = Role
 user.create.title                            = Create user
 user.create.username                         = username
 user.created                                 = The user {0} has been deleted!
