mark user as a child member

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -449,6 +449,7 @@ upcoming.matches = anstehende Spiele
 user.changePassword.newPassword              = Bitte geben Sie das neue Passwort ein!
 user.changePassword.newPasswordRepeat        = Bitte geben Sie die Passwortwiederholung ein!
 user.changePassword.oldPassword              = Bitte geben Sie das alte Passwort ein!
+user.create.child                            = Kind
 user.create.password                         = Passwort
 user.create.roles                            = Rolle
 user.create.title                            = Benutzer anlegen
