--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -449,6 +449,7 @@ upcoming.matches = Upcoming Matches
 user.changePassword.newPassword              = Please enter a new password!
 user.changePassword.newPasswordRepeat        = Please enter the password repeat!
 user.changePassword.oldPassword              = Please enter the old password!
+user.create.child                            = Child
 user.create.password                         = password
 user.create.roles                            = Role
 user.create.title                            = Create user
