--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -147,7 +147,7 @@ country.jpn           = Japan
 country.kaz           = Kasachstan
 country.ken           = Kenya
 country.kgz           = Kyrgyzstan
-country.kor           = Korea Republic
+country.kor           = S\u00FCdkorea
 country.ksa           = Saudiarabien
 country.kuw           = Kuwait
 country.kvx           = Kosovo
