--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -147,7 +147,7 @@ country.jpn           = Japan
 country.kaz           = Kazakhstan
 country.ken           = Kenya
 country.kgz           = Kyrgyzstan
-country.kor           = Korea Republic
+country.kor           = South Korea
 country.ksa           = Saudi Arabia
 country.kuw           = Kuwait
 country.kvx           = Kosovo
