added configuration flag for changing username

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,7 @@ administration.msg.info.randomMatchesCreated                   = Zufallsspiele w
 administration.msg.info.runtimeConfigSaved                     = Konfigurationsparameter wurden gespeichert.
 administration.purgeOldActiveUsers                             = \u00E4lter als 30 min l\u00F6schen
 administration.runtime.configuration                           = Konfigurationsparameter
+administration.runtime.configuration.enableChangingUsername    = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking = getrenntes Erwachsenen- und Kinder-Ranking
 administration.testResultsAllUsers                             = Testergebnisse f\u00FCr alle Benutzer erzeugen
 administration.title                                           = Administration
