--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,7 @@ administration.msg.info.randomMatchesCreated                   = created random 
 administration.msg.info.runtimeConfigSaved                     = Saved runtime configuration.
 administration.purgeOldActiveUsers                             = purge older than 30 min
 administration.runtime.configuration                           = Runtime Configuration Settings
+administration.runtime.configuration.enableChangingUsername    = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking = separated parent and child ranking
 administration.testResultsAllUsers                             = create demo results for all users
 administration.title                                           = Administration
