--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,31 +1,32 @@
 
 active.users.title = currently logged in users
 
-administration.cache.title                                     = Clear Caches
-administration.change.loglevel.title                           = Change Log Level
-administration.clearCache                                      = clear caches
-administration.config.title                                    = Configuration
-administration.createEmMatches                                 = create matches of EM 2016
-administration.createRandomMatches                             = create random matches
-administration.deleteAllBetsAndMatches                         = Delete all bets and matches
-administration.demoBetsAllUsers                                = create demo bets for all users
-administration.excel.export.allBets                            = All Bets
-administration.excel.export.pointsCount                        = Number of reached points count
-administration.excel.export.title                              = Excel Export
-administration.msg.info.allBetsAndMatchesDeleted               = All bets and matches deleted!
-administration.msg.info.cacheCleared                           = All caches cleared!
-administration.msg.info.demoBetsCreated                        = Test bets created successfully!
-administration.msg.info.demoMatchesCreated                     = Test matches created successfully!
-administration.msg.info.demoResultsCreated                     = Test results created successfully!
-administration.msg.info.logLevelChanged                        = The Log Level has been changed to "{0}"!
-administration.msg.info.randomMatchesCreated                   = created random matches successfully
-administration.msg.info.runtimeConfigSaved                     = Saved runtime configuration.
-administration.purgeOldActiveUsers                             = purge older than 30 min
-administration.runtime.configuration                           = Runtime Configuration Settings
-administration.runtime.configuration.enableChangingUsername    = Users are allowed to change their username
-administration.runtime.configuration.enabledParentChildRanking = separated parent and child ranking
-administration.testResultsAllUsers                             = create demo results for all users
-administration.title                                           = Administration
+administration.cache.title                                       = Clear Caches
+administration.change.loglevel.title                             = Change Log Level
+administration.clearCache                                        = clear caches
+administration.config.title                                      = Configuration
+administration.createEmMatches                                   = create matches of EM 2016
+administration.createRandomMatches                               = create random matches
+administration.deleteAllBetsAndMatches                           = Delete all bets and matches
+administration.demoBetsAllUsers                                  = create demo bets for all users
+administration.excel.export.allBets                              = All Bets
+administration.excel.export.pointsCount                          = Number of reached points count
+administration.excel.export.title                                = Excel Export
+administration.msg.info.allBetsAndMatchesDeleted                 = All bets and matches deleted!
+administration.msg.info.cacheCleared                             = All caches cleared!
+administration.msg.info.demoBetsCreated                          = Test bets created successfully!
+administration.msg.info.demoMatchesCreated                       = Test matches created successfully!
+administration.msg.info.demoResultsCreated                       = Test results created successfully!
+administration.msg.info.logLevelChanged                          = The Log Level has been changed to "{0}"!
+administration.msg.info.randomMatchesCreated                     = created random matches successfully
+administration.msg.info.runtimeConfigSaved                       = Saved runtime configuration.
+administration.purgeOldActiveUsers                               = purge older than 30 min
+administration.runtime.configuration                             = Runtime Configuration Settings
+administration.runtime.configuration.enableChangingUsername      = Users are allowed to change their username
+administration.runtime.configuration.enabledParentChildRanking   = separated parent and child ranking
+administration.runtime.configuration.showDemoDataNavigationEntry = Show demo data menu entry in navigation bar.
+administration.testResultsAllUsers                               = create demo results for all users
+administration.title                                             = Administration
 
 all.matches = All Matches
 
