moved favourite country setting into runtime config

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ administration.purgeOldActiveUsers                               = \u00E4lter al
 administration.runtime.configuration                             = Konfigurationsparameter
 administration.runtime.configuration.enableChangingUsername      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking   = getrenntes Erwachsenen- und Kinder-Ranking
+administration.runtime.configuration.favouriteCountry            = L\u00E4nder-Favorit
 administration.runtime.configuration.showDemoDataNavigationEntry = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
 administration.testResultsAllUsers                               = Testergebnisse f\u00FCr alle Benutzer erzeugen
 administration.title                                             = Administration
