--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,6 +24,7 @@ administration.purgeOldActiveUsers                               = purge older t
 administration.runtime.configuration                             = Runtime Configuration Settings
 administration.runtime.configuration.enableChangingUsername      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking   = separated parent and child ranking
+administration.runtime.configuration.favouriteCountry            = Country Favourite
 administration.runtime.configuration.showDemoDataNavigationEntry = Show demo data menu entry in navigation bar.
 administration.testResultsAllUsers                               = create demo results for all users
 administration.title                                             = Administration
