password reset via runtime config

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,6 +25,7 @@ administration.runtime.configuration                             = Runtime Confi
 administration.runtime.configuration.enableChangingUsername      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking   = separated parent and child ranking
 administration.runtime.configuration.favouriteCountry            = Country Favourite
+administration.runtime.configuration.passwordForReset            = Used password after password reset
 administration.runtime.configuration.showDemoDataNavigationEntry = Show demo data menu entry in navigation bar.
 administration.testResultsAllUsers                               = create demo results for all users
 administration.title                                             = Administration
