--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ administration.runtime.configuration                             = Konfiguration
 administration.runtime.configuration.enableChangingUsername      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking   = getrenntes Erwachsenen- und Kinder-Ranking
 administration.runtime.configuration.favouriteCountry            = L\u00E4nder-Favorit
+administration.runtime.configuration.passwordForReset            = Passwort nach Passwort-Reset
 administration.runtime.configuration.showDemoDataNavigationEntry = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
 administration.testResultsAllUsers                               = Testergebnisse f\u00FCr alle Benutzer erzeugen
 administration.title                                             = Administration
