added tooltip in configuration

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,34 +1,37 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
-administration.cache.title                                       = Cache l\u00F6schen
-administration.change.loglevel.title                             = Log Level \u00E4ndern
-administration.clearCache                                        = Caches l\u00F6schen
-administration.config.title                                      = Konfiguration
-administration.createEmMatches                                   = EM 2016 Gruppenspiele anlegen
-administration.createRandomMatches                               = Zufallsspiele anlegen
-administration.deleteAllBetsAndMatches                           = Alle Tipps und Spiele l\u00F6schen
-administration.demoBetsAllUsers                                  = Testtipps f\u00FCr alle Benutzer anlegen
-administration.excel.export.allBets                              = Alle Tipps
-administration.excel.export.pointsCount                          = Auflistung Punkteh\u00E4ufigkeit
-administration.excel.export.title                                = Excel Export
-administration.msg.info.allBetsAndMatchesDeleted                 = Alle Tipps und Spiele wurden gel\u00F6scht
-administration.msg.info.cacheCleared                             = Alle Caches gel\u00F6scht!
-administration.msg.info.demoBetsCreated                          = Test-Tipps wurden erfolgreich angelegt!
-administration.msg.info.demoMatchesCreated                       = Testspiele wurden erfolgreich angelegt!
-administration.msg.info.demoResultsCreated                       = Testergebnisse erfolgreich erzeugt!
-administration.msg.info.logLevelChanged                          = Der Log Level wurde auf "{0}" ge\u00E4ndert!
-administration.msg.info.randomMatchesCreated                     = Zufallsspiele wurden erfolgreich angelegt!
-administration.msg.info.runtimeConfigSaved                       = Konfigurationsparameter wurden gespeichert.
-administration.purgeOldActiveUsers                               = \u00E4lter als 30 min l\u00F6schen
-administration.runtime.configuration                             = Konfigurationsparameter
-administration.runtime.configuration.enableChangingUsername      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
-administration.runtime.configuration.enabledParentChildRanking   = getrenntes Erwachsenen- und Kinder-Ranking
-administration.runtime.configuration.favouriteCountry            = L\u00E4nder-Favorit
-administration.runtime.configuration.passwordForReset            = Passwort nach Passwort-Reset
-administration.runtime.configuration.showDemoDataNavigationEntry = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
-administration.testResultsAllUsers                               = Testergebnisse f\u00FCr alle Benutzer erzeugen
-administration.title                                             = Administration
+administration.cache.title                                               = Cache l\u00F6schen
+administration.change.loglevel.title                                     = Log Level \u00E4ndern
+administration.clearCache                                                = Caches l\u00F6schen
+administration.config.title                                              = Konfiguration
+administration.createEmMatches                                           = EM 2016 Gruppenspiele anlegen
+administration.createRandomMatches                                       = Zufallsspiele anlegen
+administration.deleteAllBetsAndMatches                                   = Alle Tipps und Spiele l\u00F6schen
+administration.demoBetsAllUsers                                          = Testtipps f\u00FCr alle Benutzer anlegen
+administration.excel.export.allBets                                      = Alle Tipps
+administration.excel.export.pointsCount                                  = Auflistung Punkteh\u00E4ufigkeit
+administration.excel.export.title                                        = Excel Export
+administration.msg.info.allBetsAndMatchesDeleted                         = Alle Tipps und Spiele wurden gel\u00F6scht
+administration.msg.info.cacheCleared                                     = Alle Caches gel\u00F6scht!
+administration.msg.info.demoBetsCreated                                  = Test-Tipps wurden erfolgreich angelegt!
+administration.msg.info.demoMatchesCreated                               = Testspiele wurden erfolgreich angelegt!
+administration.msg.info.demoResultsCreated                               = Testergebnisse erfolgreich erzeugt!
+administration.msg.info.logLevelChanged                                  = Der Log Level wurde auf "{0}" ge\u00E4ndert!
+administration.msg.info.randomMatchesCreated                             = Zufallsspiele wurden erfolgreich angelegt!
+administration.msg.info.runtimeConfigSaved                               = Konfigurationsparameter wurden gespeichert.
+administration.purgeOldActiveUsers                                       = \u00E4lter als 30 min l\u00F6schen
+administration.runtime.configuration                                     = Konfigurationsparameter
+administration.runtime.configuration.enableChangingUsername              = Benutzername ist \u00E4nderbar
+administration.runtime.configuration.enableChangingUsername.tooltip      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
+administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
+administration.runtime.configuration.enabledParentChildRanking.tooltip   = getrenntes Erwachsenen- und Kinder-Ranking
+administration.runtime.configuration.favouriteCountry                    = L\u00E4nder-Favorit
+administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
+administration.runtime.configuration.showDemoDataNavigationEntry         = Men\u00FCeintrag "Datenanlage"
+administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
+administration.testResultsAllUsers                                       = Testergebnisse f\u00FCr alle Benutzer erzeugen
+administration.title                                                     = Administration
 
 all.matches = alle Spiele
 
