making extra points configurable at runtime

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,8 +26,12 @@ administration.runtime.configuration.enableChangingUsername              = Benut
 administration.runtime.configuration.enableChangingUsername.tooltip      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = getrenntes Erwachsenen- und Kinder-Ranking
+administration.runtime.configuration.extraBetPoints                      = Punkte f\u00FCr Bonus Tipps
 administration.runtime.configuration.favouriteCountry                    = L\u00E4nder-Favorit
 administration.runtime.configuration.passwordForReset                    = Passwort nach Passwort-Reset
+administration.runtime.configuration.pointsFinalWinner.title             = Punkte f\u00FCr Meister
+administration.runtime.configuration.pointsSemiFinalWinner.title         = Punkte f\u00FCr Vize-Meister
+administration.runtime.configuration.pointsThirdFinalWinner.title        = Punkte f\u00FCr 3. Platz
 administration.runtime.configuration.showDemoDataNavigationEntry         = Men\u00FCeintrag "Datenanlage"
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
 administration.testResultsAllUsers                                       = Testergebnisse f\u00FCr alle Benutzer erzeugen
