--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -26,8 +26,12 @@ administration.runtime.configuration.enableChangingUsername              = Usern
 administration.runtime.configuration.enableChangingUsername.tooltip      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking           = separate ranking
 administration.runtime.configuration.enabledParentChildRanking.tooltip   = separated parent and child ranking
+administration.runtime.configuration.extraBetPoints                      = Points for bonus bets
 administration.runtime.configuration.favouriteCountry                    = Country Favourite
 administration.runtime.configuration.passwordForReset                    = Used password after password reset
+administration.runtime.configuration.pointsFinalWinner.title             = Points for champion
+administration.runtime.configuration.pointsSemiFinalWinner.title         = Points for vice champion
+administration.runtime.configuration.pointsThirdFinalWinner.title        = Points for 3rd Winner
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
 administration.testResultsAllUsers                                       = create demo results for all users
