added missing config property for create demo data

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,6 +22,8 @@ administration.msg.info.randomMatchesCreated                             = Zufal
 administration.msg.info.runtimeConfigSaved                               = Konfigurationsparameter wurden gespeichert.
 administration.purgeOldActiveUsers                                       = \u00E4lter als 30 min l\u00F6schen
 administration.runtime.configuration                                     = Konfigurationsparameter
+administration.runtime.configuration.createDemoData                      = Testdaten automatisch anlegen
+administration.runtime.configuration.createDemoData.tooltip              = Testdaten beim Systemstart automatisch anlegen
 administration.runtime.configuration.enableChangingUsername              = Benutzername ist \u00E4nderbar
 administration.runtime.configuration.enableChangingUsername.tooltip      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
