--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -22,6 +22,8 @@ administration.msg.info.randomMatchesCreated                             = creat
 administration.msg.info.runtimeConfigSaved                               = Saved runtime configuration.
 administration.purgeOldActiveUsers                                       = purge older than 30 min
 administration.runtime.configuration                                     = Runtime Configuration Settings
+administration.runtime.configuration.createDemoData                      = Create demo data at startup
+administration.runtime.configuration.createDemoData.tooltip              = Create demo data at system startup automatically
 administration.runtime.configuration.enableChangingUsername              = Username is changeable
 administration.runtime.configuration.enableChangingUsername.tooltip      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking           = separate ranking
