added daabase backup page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
+administration.backup.title                                              = Datenbank Backup
 administration.cache.title                                               = Cache l\u00F6schen
 administration.change.loglevel.title                                     = Log Level \u00E4ndern
 administration.clearCache                                                = Caches l\u00F6schen
@@ -430,6 +431,7 @@ msg.warn.no.statistics                 = Es liegen noch keine Statistikwerte vor
 
 navigation.activeUserList    = angemeldete Benutzer
 navigation.administration    = Administration
+navigation.backup            = Datenbank Backup
 navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
 navigation.betting.open      = noch zu tippen
