--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,7 @@
 
 active.users.title = currently logged in users
 
+administration.backup.title                                              = Database Backup
 administration.cache.title                                               = Clear Caches
 administration.change.loglevel.title                                     = Change Log Level
 administration.clearCache                                                = clear caches
@@ -430,6 +431,7 @@ msg.warn.no.statistics                 = There are no statistics by now!
 
 navigation.activeUserList    = logged in users
 navigation.administration    = Administration
+navigation.backup            = Database Backup
 navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
 navigation.betting.open      = not betted yet
