create database backup

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,6 +1,7 @@
 
 active.users.title = currently logged in users
 
+administration.backup.executeBackupButton                                = Create backup
 administration.backup.title                                              = Database Backup
 administration.cache.title                                               = Clear Caches
 administration.change.loglevel.title                                     = Change Log Level
@@ -15,6 +16,7 @@ administration.excel.export.pointsCount                                  = Numbe
 administration.excel.export.title                                        = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted                         = All bets and matches deleted!
 administration.msg.info.cacheCleared                                     = All caches cleared!
+administration.msg.info.databaseBackupCreated                            = Datbase backup at {0} created.
 administration.msg.info.demoBetsCreated                                  = Test bets created successfully!
 administration.msg.info.demoMatchesCreated                               = Test matches created successfully!
 administration.msg.info.demoResultsCreated                               = Test results created successfully!
