--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,7 @@
 
 active.users.title = aktuell angemeldete Benutzer
 
+administration.backup.executeBackupButton                                = Backup erstellen
 administration.backup.title                                              = Datenbank Backup
 administration.cache.title                                               = Cache l\u00F6schen
 administration.change.loglevel.title                                     = Log Level \u00E4ndern
@@ -15,6 +16,7 @@ administration.excel.export.pointsCount                                  = Aufli
 administration.excel.export.title                                        = Excel Export
 administration.msg.info.allBetsAndMatchesDeleted                         = Alle Tipps und Spiele wurden gel\u00F6scht
 administration.msg.info.cacheCleared                                     = Alle Caches gel\u00F6scht!
+administration.msg.info.databaseBackupCreated                            = Datenbank Backup unter {0} erstellt.
 administration.msg.info.demoBetsCreated                                  = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated                               = Testspiele wurden erfolgreich angelegt!
 administration.msg.info.demoResultsCreated                               = Testergebnisse erfolgreich erzeugt!
