implemented database backup

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,9 +14,13 @@ administration.demoBetsAllUsers                                          = Testt
 administration.excel.export.allBets                                      = Alle Tipps
 administration.excel.export.pointsCount                                  = Auflistung Punkteh\u00E4ufigkeit
 administration.excel.export.title                                        = Excel Export
+administration.msg.backup.error.noInMemory                               = Backup von In-Memory Datenbanken werden nicht unterst\u00FCtzt. Bitte verwenden Sie eine H2 file-basierte Datenbank!
+administration.msg.backup.error.unknown                                  = Es ist ein Fehler beim Datenbank-Backup aufgetreten: {0}
+administration.msg.backup.error.unsupportedDatabase                      = Das Datenbank-Backup wird nur bei Verwendung einer H2-Datenbank unterst\u00FCtzt!
 administration.msg.info.allBetsAndMatchesDeleted                         = Alle Tipps und Spiele wurden gel\u00F6scht
 administration.msg.info.cacheCleared                                     = Alle Caches gel\u00F6scht!
 administration.msg.info.databaseBackupCreated                            = Datenbank Backup unter {0} erstellt.
+administration.msg.info.databaseBackupFolderSaved                        = Datenbank-Backup-Verzeichnis {0} wurde gespeichert.
 administration.msg.info.demoBetsCreated                                  = Test-Tipps wurden erfolgreich angelegt!
 administration.msg.info.demoMatchesCreated                               = Testspiele wurden erfolgreich angelegt!
 administration.msg.info.demoResultsCreated                               = Testergebnisse erfolgreich erzeugt!
@@ -46,6 +50,8 @@ all.matches = alle Spiele
 
 app.dateformat            = EEE dd. MMMM yyyy HH:mm
 app.dateformatWithSeconds = EEE dd. MMMM yyyy HH:mm:ss
+
+backup.backupFolder = Backup Verzeichnis
 
 bet.edit.heading       = Tipp abgeben
 bet.edit.title         = Spieltipp
