--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -14,9 +14,13 @@ administration.demoBetsAllUsers                                          = creat
 administration.excel.export.allBets                                      = All Bets
 administration.excel.export.pointsCount                                  = Number of reached points count
 administration.excel.export.title                                        = Excel Export
+administration.msg.backup.error.noInMemory                               = In-Memory databases not supported! Please use a H2 file based database!
+administration.msg.backup.error.unknown                                  = Unknown error occured in database backup: {0}
+administration.msg.backup.error.unsupportedDatabase                      = Database backup is supported for H2 databases only!
 administration.msg.info.allBetsAndMatchesDeleted                         = All bets and matches deleted!
 administration.msg.info.cacheCleared                                     = All caches cleared!
 administration.msg.info.databaseBackupCreated                            = Datbase backup at {0} created.
+administration.msg.info.databaseBackupFolderSaved                        = Database backup folder {0} saved.
 administration.msg.info.demoBetsCreated                                  = Test bets created successfully!
 administration.msg.info.demoMatchesCreated                               = Test matches created successfully!
 administration.msg.info.demoResultsCreated                               = Test results created successfully!
@@ -46,6 +50,8 @@ all.matches = All Matches
 
 app.dateformat            = EEE dd MMMM yyyy HH:mm
 app.dateformatWithSeconds = EEE dd MMMM yyyy HH:mm:ss
+
+backup.backupFolder = Backup Folder
 
 bet.edit.heading       = Enter bet
 bet.edit.title         = match bet
