--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ active.users.title = aktuell angemeldete Benutzer
 
 administration.backup.executeBackupButton                                = Backup erstellen
 administration.backup.title                                              = Datenbank Backup
+administration.backup.warning.hint                                       = Es werden nur dateibasierte H2-Datenbank-Backups unterst\u00FCtzt!
 administration.cache.title                                               = Cache l\u00F6schen
 administration.change.loglevel.title                                     = Log Level \u00E4ndern
 administration.clearCache                                                = Caches l\u00F6schen
