--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,6 +3,7 @@ active.users.title = currently logged in users
 
 administration.backup.executeBackupButton                                = Create backup
 administration.backup.title                                              = Database Backup
+administration.backup.warning.hint                                       = Only H2 file based databases are supported!
 administration.cache.title                                               = Clear Caches
 administration.change.loglevel.title                                     = Change Log Level
 administration.clearCache                                                = clear caches
