added possibility to set timezone at runtime

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ administration.runtime.configuration.pointsSemiFinalWinner.title         = Punkt
 administration.runtime.configuration.pointsThirdFinalWinner.title        = Punkte f\u00FCr 3. Platz
 administration.runtime.configuration.showDemoDataNavigationEntry         = Men\u00FCeintrag "Datenanlage"
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Men\u00FCeintrag "Datenanlage" in Navigation anzeigen.
+administration.runtime.configuration.timeZone                            = Zeitzone
 administration.testResultsAllUsers                                       = Testergebnisse f\u00FCr alle Benutzer erzeugen
 administration.title                                                     = Administration
 
