--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -44,6 +44,7 @@ administration.runtime.configuration.pointsSemiFinalWinner.title         = Point
 administration.runtime.configuration.pointsThirdFinalWinner.title        = Points for 3rd Winner
 administration.runtime.configuration.showDemoDataNavigationEntry         = Menu entry demo data
 administration.runtime.configuration.showDemoDataNavigationEntry.tooltip = Show demo data menu entry in navigation bar.
+administration.runtime.configuration.timeZone                            = Time Zone
 administration.testResultsAllUsers                                       = create demo results for all users
 administration.title                                                     = Administration
 
