show current date time

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,6 +32,7 @@ administration.purgeOldActiveUsers                                       = \u00E
 administration.runtime.configuration                                     = Konfigurationsparameter
 administration.runtime.configuration.createDemoData                      = Testdaten automatisch anlegen
 administration.runtime.configuration.createDemoData.tooltip              = Testdaten beim Systemstart automatisch anlegen
+administration.runtime.configuration.currentTime                         = aktuelle Zeit
 administration.runtime.configuration.enableChangingUsername              = Benutzername ist \u00E4nderbar
 administration.runtime.configuration.enableChangingUsername.tooltip      = Benutzer d\u00FCrfen ihren Benutzernamen \u00E4ndern
 administration.runtime.configuration.enabledParentChildRanking           = getrenntes Ranking
