--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -32,6 +32,7 @@ administration.purgeOldActiveUsers                                       = purge
 administration.runtime.configuration                                     = Runtime Configuration Settings
 administration.runtime.configuration.createDemoData                      = Create demo data at startup
 administration.runtime.configuration.createDemoData.tooltip              = Create demo data at system startup automatically
+administration.runtime.configuration.currentTime                         = current time
 administration.runtime.configuration.enableChangingUsername              = Username is changeable
 administration.runtime.configuration.enableChangingUsername.tooltip      = Users are allowed to change their username
 administration.runtime.configuration.enabledParentChildRanking           = separate ranking
