--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,2 +1,3 @@
 
 msg.bet.betting.error.passwordMismatch = The new password differs from password repeat!
+msg.invalidTeamResult                  = You entered result is invalid!
