refactoring creating and editing match

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,3 +1,6 @@
 
 msg.bet.betting.error.passwordMismatch = The new password differs from password repeat!
+msg.input.countries.and.teamNames      = Only country or team names allowed!
+msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
+msg.input.teamOne.teamTwo              = Please select a name for team one and team two!
 msg.invalidTeamResult                  = You entered result is invalid!
