--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -426,12 +426,9 @@ msg.bet.betting.info.allBetted         = All matches betted!
 msg.bet.betting.warn.extraBetOpen      = Your bonus betting is still pending!
 msg.input.complete.date.time           = Please enter date and time!
 msg.input.complete.result              = Please enter both goals!
-msg.input.countries.and.teamNames      = Only country or team names allowed!
-msg.input.same.teams                   = A team cannot play against itself!
-msg.input.stadium                      = Please enter the stadium!
-msg.input.teamOne.teamTwo              = Please enter a name for team one and team two!
 msg.match.created                      = Match {0} vs. {1} created!
 msg.match.deleted                      = The match {0} vs {1} has been deleted!
+msg.match.notFound                     = Can\u00B4t find match with ID {0}!
 msg.match.updated                      = The match {0} vs {1} has been updated!
 msg.negative.values.not.allowed        = Negative values are not allowed!
 msg.user.profile.info.passwordChanged  = Password changed successfully!
