--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -426,12 +426,9 @@ msg.bet.betting.info.allBetted         = Derzeit alle Spiele getippt!
 msg.bet.betting.warn.extraBetOpen      = Du hast deinen Bonus-Tipp noch nicht abgegeben!
 msg.input.complete.date.time           = Bitte geben Sie Datum und Uhrzeit ein!
 msg.input.complete.result              = Bitte geben Sie beide Tore an!
-msg.input.countries.and.teamNames      = Nur Landesauswahl oder Teamnamen erlaubt!
-msg.input.same.teams                   = Ein Team kann nicht gegen sich selbst spielen!
-msg.input.stadium                      = Bitte geben Sie das Station ein!
-msg.input.teamOne.teamTwo              = Bitte geben Sie den Namen f\u00FCr Team 1 und Team 2 ein!
 msg.match.created                      = Spiel {0} gegen {1} angelegt!
 msg.match.deleted                      = Das Spiel {0} gegen {1} wurde gel\u00F6scht!
+msg.match.notFound                     = Das Match mit der ID {0} kann nicht gefunden werden!
 msg.match.updated                      = Spiel {0} gegen {1} aktualisiert!
 msg.negative.values.not.allowed        = Negative Werte sind nicht erlaubt!
 msg.user.profile.info.passwordChanged  = Passwort erfolgreich ge\u00E4ndert!
