bugfix navigation layout

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -345,8 +345,6 @@ group.title.quarterFinal     = Viertelfinale
 group.title.roundOfSixteen   = Achtelfinale
 group.title.semiFinal        = Halbfinale
 
-groups = Gruppen
-
 image.gallery.downloadAll             = Alle Fotos herunterladen
 image.gallery.msg.delete.perm.denied  = Sie k\u00F6nnen nur Ihre eigenen Fotos l\u00F6schen!
 image.gallery.msg.deleted             = Das Foto wurde gel\u00F6scht!
@@ -410,6 +408,7 @@ matches.list.editMatch     = Spiel \u00E4ndern
 matches.list.enterResult   = Ergebnis eingeben
 matches.list.result        = Ergebnis
 matches.matchresult.title  = Matchergebnis editieren
+matches.title              = Spiele
 
 matchresult.heading = Ergebnis eintragen
 
@@ -436,7 +435,7 @@ msg.user.profile.info.usernameChanged  = Der Benutzername wurde erfolgreich ge\u
 msg.warn.no.statistics                 = Es liegen noch keine Statistikwerte vor!
 
 navigation.activeUserList    = angemeldete Benutzer
-navigation.administration    = Administration
+navigation.administration    = Admin
 navigation.backup            = Datenbank Backup
 navigation.betting           = Tippen
 navigation.betting.extraBets = Bonus-Tipps
