--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -345,8 +345,6 @@ group.title.quarterFinal     = Quarter Final
 group.title.roundOfSixteen   = Round of Sixteen
 group.title.semiFinal        = Semi Final
 
-groups = Groups
-
 image.gallery.downloadAll             = Download all images
 image.gallery.msg.delete.perm.denied  = You can delete you own images only!
 image.gallery.msg.deleted             = The image has been deleted!
@@ -410,6 +408,7 @@ matches.list.editMatch     = edit match
 matches.list.enterResult   = enter result
 matches.list.result        = result
 matches.matchresult.title  = enter match result
+matches.title              = Matches
 
 matchresult.heading = Enter result
 
@@ -436,7 +435,7 @@ msg.user.profile.info.usernameChanged  = Username was changed sucessfully!
 msg.warn.no.statistics                 = There are no statistics by now!
 
 navigation.activeUserList    = logged in users
-navigation.administration    = Administration
+navigation.administration    = Admin
 navigation.backup            = Database Backup
 navigation.betting           = Betting
 navigation.betting.extraBets = bonus bets
